Changed way of constructing URLs to avoid problems under linux